rnsc/test_data/rns_integration/error/parser/inner_directive/unexpected_token_in_body_recovers.rns
; Tests that parser continues after unexpected token error and reports subsequent errors
; Expected errors: E-034 (unexpected token in inner body), E-007 (unknown token in class body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object

     unknown_token ; <- E-034
.inner_end

     unknown_token_after_end ; <- E-007 after inner_end

.class_end
